[gd_scene load_steps=8 format=3 uid="uid://ersgjbcsmvwu"]

[ext_resource type="Script" uid="uid://0cl3jxy74bd8" path="res://TankWars/Actuators/tank_body.gd" id="1_1vct5"]
[ext_resource type="PackedScene" uid="uid://c6c221fld2khi" path="res://TankWars/Sensors/radar.tscn" id="2_fme24"]
[ext_resource type="Script" uid="uid://cau6j0o0julfq" path="res://addons/godot_state_charts/state_chart.gd" id="3_fx6b7"]
[ext_resource type="Script" uid="uid://bou0yn8lpwcuh" path="res://addons/godot_state_charts/compound_state.gd" id="4_wcy70"]
[ext_resource type="Script" uid="uid://dyiggrr357tov" path="res://addons/godot_state_charts/atomic_state.gd" id="5_5hxh0"]
[ext_resource type="Script" uid="uid://m8bym6l05tkl" path="res://addons/godot_state_charts/transition.gd" id="6_yrhgf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htdy2"]
size = Vector2(60, 40)

[node name="TankBody" type="Area2D"]
script = ExtResource("1_1vct5")

[node name="Radar" parent="." instance=ExtResource("2_fme24")]

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_htdy2")

[node name="Behavior" type="Node" parent="."]
script = ExtResource("3_fx6b7")
metadata/_custom_type_script = "uid://cau6j0o0julfq"

[node name="TankBodyRotation" type="Node" parent="Behavior"]
script = ExtResource("4_wcy70")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Idle" type="Node" parent="Behavior/TankBodyRotation"]
script = ExtResource("5_5hxh0")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="rotate" type="Node" parent="Behavior/TankBodyRotation/Idle"]
script = ExtResource("6_yrhgf")
to = NodePath("../../Rotating")
event = &"rotate"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://m8bym6l05tkl"

[node name="Rotating" type="Node" parent="Behavior/TankBodyRotation"]
script = ExtResource("5_5hxh0")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="rotated" type="Node" parent="Behavior/TankBodyRotation/Rotating"]
script = ExtResource("6_yrhgf")
to = NodePath("../../Idle")
event = &"rotated"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://m8bym6l05tkl"

[connection signal="state_processing" from="Behavior/TankBodyRotation/Rotating" to="." method="_on_rotating_state_processing"]
[connection signal="taken" from="Behavior/TankBodyRotation/Rotating/rotated" to="." method="_on_rotated_taken"]
